[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/spaceShips_001.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/shield1.png" type="Texture" id=3]
[ext_resource path="res://Player/sfx_laser1.ogg" type="AudioStream" id=4]
[ext_resource path="res://Player/sfx_shieldUp.ogg" type="AudioStream" id=5]
[ext_resource path="res://Player/explosionCrunch_000.ogg" type="AudioStream" id=6]
[ext_resource path="res://Player/star2.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 40 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("spaceShips_001:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shield1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("spaceShips_001:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shield1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00643525, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0.811765, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shield1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 67.0005

[node name="Player" type="Area2D"]
z_index = 20
collision_layer = 2
collision_mask = 21
script = ExtResource( 2 )

[node name="BulletCharge" type="Sprite" parent="."]
visible = false
position = Vector2( 23, 0 )
texture = ExtResource( 7 )

[node name="shield1" type="Sprite" parent="."]
position = Vector2( 16, 0 )
rotation = 1.57079
texture = ExtResource( 3 )

[node name="shield2" type="Sprite" parent="shield1"]
position = Vector2( -7.10805e-05, 32 )
rotation = -3.14159
texture = ExtResource( 3 )

[node name="spaceShips_001" type="Sprite" parent="."]
rotation = -1.57079
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InvulnerableTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/invulnerable = SubResource( 3 )

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0

[node name="ShieldUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ShieldArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldArea"]
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_ShootCooldownTimer_timeout"]
[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_InvulnerableTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="body_entered" from="ShieldArea" to="." method="_on_ShieldArea_body_entered"]
